clusters/vollminlab-cluster/apps/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: prowlarr
    meta.helm.sh/release-namespace: mediastack
  creationTimestamp: "2025-02-04T03:59:36Z"
  labels:
    app: prowlarr-18.14.3
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/version: 1.30.2.4939
    helm-revision: "1"
    helm.sh/chart: prowlarr-18.14.3
    release: prowlarr
    service.name: main
  name: prowlarr
  namespace: mediastack
  resourceVersion: "3344684"
  uid: f2b05c15-e1d4-461a-aa1d-ec791e0d79d6
spec:
  clusterIP: 10.101.106.102
  clusterIPs:
  - 10.101.106.102
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: main
    port: 9696
    protocol: TCP
    targetPort: 9696
  selector:
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/name: prowlarr
    pod.name: main
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: prowlarr
    meta.helm.sh/release-namespace: mediastack
  creationTimestamp: "2025-02-04T03:59:36Z"
  labels:
    app: prowlarr-18.14.3
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/version: 1.30.2.4939
    helm-revision: "1"
    helm.sh/chart: prowlarr-18.14.3
    release: prowlarr
    service.name: metrics
  name: prowlarr-metrics
  namespace: mediastack
  resourceVersion: "3344680"
  uid: 8e3308bf-3f1d-4374-a63e-81799fe7b2db
spec:
  clusterIP: 10.107.125.77
  clusterIPs:
  - 10.107.125.77
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: metrics
    port: 9697
    protocol: TCP
    targetPort: 9697
  selector:
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/name: prowlarr
    pod.name: main
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
